--- a/html/css/floate03fernando.css
+++ b/html/css/floate03fernando.css
@@ -15,7 +15,7 @@ section{
     margin-top: 2%;
     margin-bottom: 2%;
     margin-left: 9%;
-    height:10% ;
+    height:auto ;
     width: 10%;
     background-color:green;
     color: aliceblue;
